fix(global): Ajustar z-index de menú de usuario desplegable y menú contextual

--- a/static/css/base/variables.css
+++ b/static/css/base/variables.css
@@ -110,8 +110,8 @@
     --navbar-z-index: 4;
     --header-z-index: 9991;
     --banner-z-index: 9991;
-    --contextual-menu-z-index:9990;
-    --dropdown-user-menu-z-index: 9992;
+    --contextual-menu-z-index:9992;
+    --dropdown-user-menu-z-index: 9993;
     --flash-message-z-index: 200;
 }
 
